# intel-graphics-compiler

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  NOTICES.txt  README.md
IGC/AdaptorOCL/: CMakeLists.txt  CleanupInputIR.cpp  CleanupInputIR.hpp  ConvertUserSemanticDecoratorOnFunctions.cpp  DriverInfoOCL.hpp  DriverInfoOCLMac.hpp  GlobalData.h  LowerInvokeSIMD.cpp  LowerInvokeSIMD.hpp  MergeAllocasOCL.cpp  MergeAllocasOCL.h  MoveStaticAllocas.cpp  MoveStaticAllocas.h  PatchList.h  PreprocessSPVIR.cpp  PreprocessSPVIR.h  ResolveConstExprCalls.cpp  ResolveConstExprCalls.h  TranslationBlock.h  UnifyIROCL.cpp  UnifyIROCL.hpp  cmc.cpp  cmc.h  dllInterfaceCompute.cpp  igc-opencl.pc.in  igc.opencl.h.in  igcmc.h
IGC/AdaptorOCL/cif/: readme.txt  (+1 more)
IGC/BiFManager/: BiFManagerCommon.cpp  BiFManagerCommon.hpp  BiFManagerHandler.cpp  BiFManagerHandler.hpp  BiFManagerTool.cpp  BiFManagerTool.hpp  CMakeLists.txt  main.cpp
IGC/BiFModule/: .clang-format  .force-bifmodule-rebuild  CMakeLists.txt  concat.py  resource_embedder.py
IGC/CMFE/: CMakeLists.txt  cmfe_deps.cmake
IGC/Compiler/: ACLPrintfTranslation.cpp  ACLPrintfTranslation.h  BlendToDiscard.cpp  CMakeLists.txt  CPSMSAAOMaskWA.cpp  CPSMSAAOMaskWA.h  CodeGenContext.cpp  CodeGenContextWrapper.cpp  CodeGenContextWrapper.hpp  CodeGenPublic.cpp  CodeGenPublic.h  CodeGenPublicEnums.h  ConvertMSAAPayloadTo16Bit.cpp  ConvertMSAAPayloadTo16Bit.hpp  CustomLoopOpt.cpp  CustomLoopOpt.hpp  CustomSafeOptPass.cpp  CustomSafeOptPass.hpp  CustomUnsafeOptPass.cpp  CustomUnsafeOptPass.hpp  DiscardOnAlpha.cpp  DynamicTextureFolding.cpp  DynamicTextureFolding.h  FPRangeAnalysis.cpp  FPRangeAnalysis.hpp  FindInterestingConstants.cpp  FindInterestingConstants.h  FixInvalidFuncNamePass.cpp  FixInvalidFuncNamePass.hpp  FixLdOffsets.cpp  FixLdOffsets.h  FixResourcePtr.cpp  FixResourcePtr.hpp  FixSampleDInputs.cpp  FixSampleDInputs.h  GenRotate.cpp  GenRotate.hpp  GenTTI.cpp  GenTTI.h  GenUpdateCB.cpp  (+59 more)
IGC/DebugInfo/: CMakeLists.txt  DIE.cpp  DIE.hpp  DbgVariableTypes.hpp  DebugInfoUtils.hpp  DwarfCompileUnit.cpp  DwarfCompileUnit.hpp  DwarfDebug.cpp  DwarfDebug.hpp  DwarfExpression.cpp  DwarfExpression.hpp  EmitterOpts.hpp  LexicalScopes.cpp  LexicalScopes.hpp  StreamEmitter.cpp  StreamEmitter.hpp  Utils.cpp  Utils.hpp  VISADebugDecoder.cpp  VISADebugDecoder.hpp  VISADebugEmitter.cpp  VISADebugEmitter.hpp  VISADebugInfo.cpp  VISADebugInfo.hpp  VISAIDebugEmitter.hpp  VISAModule.cpp  VISAModule.hpp  Version.hpp
IGC/ElfPackager/: CMakeLists.txt  function_bin.txt  main.cpp
IGC/GenISAIntrinsics/: CMakeLists.txt  GenIntrinsicFunctions.cpp  GenIntrinsicFunctions.h  GenIntrinsicInst.h  GenIntrinsicLookup.cpp  GenIntrinsicLookup.h  GenIntrinsics.cpp  GenIntrinsics.h  Intrinsic_definitions.py  Intrinsics.py  Intrinsics_ReadMe.csv  LlvmTypesMapping.cpp  LlvmTypesMapping.h
IGC/IRBuilderGenerator/: BuilderConcepts.h  BuilderUtils.h  CMakeLists.txt  README.md  main.cpp
IGC/OCLFE/: CMakeLists.txt
IGC/OCLInterfaceTester/: CMakeLists.txt  IgcChecks.cpp  OCLInterfaceTester.cpp  OCLInterfaceTester.h
IGC/Options/: API-Options-Internal.md  API-Options.md  CMakeLists.txt
IGC/PCH/: CMakeLists.txt  common.h  llvm.h  llvm_dummy.cpp
IGC/VISALinkerDriver/: CMakeLists.txt  VLD.cpp  VLD.hpp  VLD_SPIRVSplitter.cpp  VLD_SPIRVSplitter.hpp
IGC/VectorCompiler/: .gitignore  CMakeLists.txt
IGC/ZEBinWriter/: CMakeLists.txt  README.md
IGC/igc_opt/: CMakeLists.txt  CreateIGCContext.cpp  CreateIGCContext.h  InitializeAllIGCPasses.cpp  InitializeAllIGCPasses.h  RestoreGenISAIntrinsicDeclarations.cpp  RestoreGenISAIntrinsicDeclarations.h  igc_opt.cpp
visa/: AccSubstitution.cpp  AccSubstitution.h  Arena.cpp  Arena.h  Assertions.cpp  Assertions.h  Attributes.cpp  Attributes.hpp  BinaryCISAEmission.cpp  BinaryCISAEmission.h  BinaryEncoding.cpp  BinaryEncoding.h  BinaryEncodingCNL.cpp  BinaryEncodingCNL.h  BinaryEncodingIGA.cpp  BinaryEncodingIGA.h  BitSet.cpp  BitSet.h  BuildCISAIR.h  BuildCISAIRImpl.cpp  BuildIR.h  BuildIRImpl.cpp  ByteCodeReaderNG.cpp  CFGStructurizer.cpp  CFGStructurizer.h  CISA.l  CISA.y  CMakeLists.txt  Common_BinaryEncoding.cpp  Common_BinaryEncoding.h  Common_GEN.h  Common_ISA.cpp  Common_ISA.h  Common_ISA_framework.cpp  Common_ISA_framework.h  Common_ISA_util.cpp  Common_ISA_util.h  DebugInfo.cpp  DebugInfo.h  EmuInt64Add.cpp  (+134 more)
visa/CISA_ld/: CISALinker.cpp  CISALinker.h  CISA_ld.cpp  CISA_ld.h
visa/FC_linker/: CMakeLists.txt  DepGraph.cpp  DepGraph.h  PatchInfoDumper.cpp  PatchInfoDumper.h  PatchInfoLinker.cpp  PatchInfoLinker.h  PatchInfoReader.cpp  PatchInfoReader.h  PatchInfoRecord.h  cm_fc_ld.cpp  cm_fc_ld.h  main.cpp
visa/LocalScheduler/: Android.mk  CMakeLists.txt  Dependencies_G4IR.cpp  Dependencies_G4IR.h  G4_Sched.cpp  Heuristics_G4IR.cpp  LatencyTable.cpp  LatencyTable.h  LocalScheduler_G4IR.cpp  LocalScheduler_G4IR.h  SKL_latencies.def  SWSB_G4IR.cpp  SWSB_G4IR.h
visa/Passes/: AccSubstitution.cpp  AccSubstitution.hpp  InsertS0Movs.cpp  InsertS0Movs.hpp  InsertThryld.cpp  InsertThryld.hpp  InstCombine.cpp  InstCombine.hpp  LVN.cpp  LVN.hpp  MergeScalars.cpp  MergeScalars.hpp  SRSubstitution.cpp  SRSubstitution.hpp  SendFusion.cpp  SendFusion.hpp  StaticProfiling.cpp  StaticProfiling.hpp
visa/RA_Validation/: README.md  ra_validate.cpp
visa/VisaToG4/: TranslateALU.cpp  TranslateBranches.cpp  TranslateMath.cpp  TranslateMisc.cpp  TranslateSend3D.cpp  TranslateSendLdStLegacy.cpp  TranslateSendLdStLsc.cpp  TranslateSendMedia.cpp  TranslateSendRaw.cpp  TranslateSendSync.cpp
visa/iga/: BuildFunctions.cmake  BuildSetup.cmake  CMakeLists.txt  IGAJSON.md  IGAJSONv1.md  IGAJSONv2.md  README  build_all.bat  build_all.sh
visa/include/: CompilerStats.h  JitterDataStruct.h  KernelCostInfo.h  KernelInfo.h  RT_Jitter_Interface.h  RelocationInfo.h  VISAAttributes.def  VISAAttributes.h  VISABuilderAPIDefinition.h  VISADefines.h  VISAOptions.def  VISAOptions.h  VISAOptionsDefs.h  gtpin_IGC_interface.h  visaBuilder_interface.h  visa_igc_common_header.h  visa_wa.h
visa/v2c/: Android-pre.in  Android.in  file_filters.txt  include_mappings.txt
(+7732 files in other folders)
